--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>RIAZ WEALTH</h1>
-</body>
-</html>
+{% extends 'pages/base.html' %} 
+{% load static %} 
+
+{% block content %}
+<section>
+    <div class="container">
+        <section class="row">
+            <h1>Index Page</h1>
+        </section>
+    </div>
+</section>
+{% endblock content %}
