--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -2,10 +2,42 @@
 {% load static %} 
 
 {% block content %}
-<section>
-    <div class="container">
-        <section class="row">
-            <h1>Index Page</h1>
+<section id="hero-page">
+    <div class="container py-5">
+        <section class="row p-5 "
+        >
+            <article class="col-12 col-sm-6">
+                <header class="p-3 p-md-5">
+                    <h1>Grow Your Wealth, Secure Your Future</h1>
+                    <p class="pt-3 pb-5">
+                        Join thousands of savvy investors who trust RiazVest to multiply their assets. 
+                        Whether you're a first-time investor or a seasoned pro, we offer tailored plans that help you achieve your financial goals with confidence. 
+                        Start investing today, and watch your wealth grow.
+                    </p>
+                    <p>
+                        <a 
+                            href="" 
+                            class="btn btn-success btn-lg">
+                            Get Started
+                        </a>
+
+                        <a 
+                            href="" 
+                            class="btn btn-outline-success btn-lg">
+                            Explore Plans
+                        </a>
+                    </p>
+                </header>
+            </article>
+
+            <article class="col-12 col-sm-6">
+                <img 
+                    src="{% static '/images/corporate-min.jpg' %}" 
+                    alt=""
+                    class="img-fluid"
+                    style="object-fit: cover; object-position: bottom; width:100%; height: 400px; border-radius: 20px;"
+                >
+            </article>
         </section>
     </div>
 </section>
