--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -32,7 +32,7 @@
         <a class="navbar-brand" href="/">
           <img
             src="{% static 'investments/img/Logo_icon.svg' %}"
-            alt="Wealth Wheel"
+            alt="Riaz Wealth"
             width="80%"
             style="margin: auto; padding: 0.2em 1em 0em"
             class="d-inline-block align-text-top img-fluid"
