--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -17,13 +17,14 @@
                     <p>
                         <a 
                             href="" 
-                            class="btn btn-success btn-lg">
+                            class="btn btn-1 me-3"
+                        >
                             Get Started
                         </a>
 
                         <a 
                             href="" 
-                            class="btn btn-outline-success btn-lg">
+                            class="btn btn-outline-1">
                             Explore Plans
                         </a>
                     </p>
