adjustment on the pages

--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -78,7 +78,7 @@
               <a
                 class="nav-link ms-4"
                 href="{% url 'offers' %}"
-                >Investment Offers</a
+                >Investment Plans</a
               >
             </li>
             <li class="nav-item">
@@ -111,5 +111,9 @@
         {% block content %}
 
         {% endblock content %}
+
+        
+
+ <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </body>
 </html>
