Swipe client section

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -44,12 +44,13 @@
 </section>
 <!-- === End of the hero page ===-->
 
+<!--=== WhyChooseUs ===-->
 <section id="whyChooseUs" class="bg-light">
     <div class="container">
         <section class="row g-5">
             <article class="col-12 col-sm-6 col-md-4">
-                <div class="text-end">
-                    <h1>Why Choose RiazWealth</h1>
+                <div class="pt-3">
+                    <h1>Why Choose RiazVest</h1>
                     <p>
                         This is why we are the best in the market today.
                     </p>
@@ -124,4 +125,74 @@
         </section>
     </div>
 </section>
+<!--=== End of whyChoose Us section ===-->
+
+
+<!-- ======= Clients Section ======= -->
+<section id="clients" class="clients py-5 bg-white">
+    <div class="container">
+      <div class="clients-slider swiper">
+        <div class="swiper-wrapper align-items-center">
+          <div class="swiper-slide">
+            <img
+              src="{% static 'images/bitcoin.png' %}"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="{% static '/images/ethereum.png' %}"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="{% static '/images/litecoin.png' %}"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="{% static '/images/cardona.png' %}"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="{% static '/images/bnb.png' %}"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="{% static '/images/tether.png' %}"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="{% static '/images/usd.png' %}"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="{% static '/images/polkadot.png' %}"
+              class="img-fluid"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+  </section>
+  <!-- End Clients Section -->
 {% endblock content %}
