--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -195,4 +195,108 @@
     </div>
   </section>
   <!-- End Clients Section -->
+
+  <!-- ==== Investment plans sections ===-->
+  <section id="investmentPlans">
+        <div class="container">
+            <section class="row g-5">
+
+                <article class="col-12 col-sm-6 col-md-4">
+                    <a href="#" class="plans p-5 shadow rounded-5" id="silver_gold">
+                        <div class="plan-details">
+                            <h4>Silver and Gold</h4>
+                            <h2>From $5000</h2>
+                            <div class="d-flex mt-4">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Max Amount: 5,000,000</p>
+                            </div>
+                            
+                            <div class="d-flex">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Profit: 5%</p>
+                            </div>
+                            
+                            <div class="d-flex">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Duration: After 1 Week</p>
+                            </div>
+
+                            <div class="d-flex">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Referrals: 5%</p>
+                            </div>
+                            
+                            <button class="btn btn-outline-1 mt-4">
+                                Invest Now
+                            </button>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="col-12 col-sm-6 col-md-4">
+                    <a href="#" class="plans p-5 shadow rounded-5" id="oil-gas">
+                        <div class="plan-details">
+                            <h4>Oil and Gas</h4>
+                            <h2>From $5000</h2>
+                            <div class="d-flex mt-4">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Max Amount: 5,000,000</p>
+                            </div>
+                            
+                            <div class="d-flex">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Profit: 5%</p>
+                            </div>
+                            
+                            <div class="d-flex">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Duration: After 1 Week</p>
+                            </div>
+
+                            <div class="d-flex">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Referrals: 5%</p>
+                            </div>
+                            
+                            <button class="btn btn-1 mt-4">
+                                Invest Now
+                            </button>
+                        </div>
+                    </a>
+                </article>
+
+                <article class="col-12 col-sm-6 col-md-4">
+                    <a href="#" class="plans p-5 shadow rounded-5" id="realestates">
+                        <div class="plan-details">
+                            <h4>Real Estates</h4>
+                            <h2>From $5000</h2>
+                            <div class="d-flex mt-4">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Max Amount: 5,000,000</p>
+                            </div>
+                            
+                            <div class="d-flex">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Profit: 5%</p>
+                            </div>
+                            
+                            <div class="d-flex">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Duration: After 1 Week</p>
+                            </div>
+
+                            <div class="d-flex">
+                                <i class="bi bi-bookmarks"></i>
+                                <p>Referrals: 5%</p>
+                            </div>
+                            
+                            <button class="btn btn-outline-1 mt-4">
+                                Invest Now
+                            </button>
+                        </div>
+                    </a>
+                </article>
+            </section>
+        </div>
+  </section>
 {% endblock content %}
