--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -204,8 +204,11 @@
                 <article class="col-12 col-sm-6 col-md-4">
                     <a href="#" class="plans p-5 shadow rounded-5" id="silver_gold">
                         <div class="plan-details">
-                            <h4>Silver and Gold</h4>
-                            <h2>From $5000</h2>
+                            <h2 class="h3">Silver and Gold</h2>
+                            <h3 class="h1 pricing">
+                                <small>from</small>
+                                <sup>$</sup>5000
+                            </h3>
                             <div class="d-flex mt-4">
                                 <i class="bi bi-bookmarks"></i>
                                 <p>Max Amount: 5,000,000</p>
@@ -236,8 +239,11 @@
                 <article class="col-12 col-sm-6 col-md-4">
                     <a href="#" class="plans p-5 shadow rounded-5" id="oil-gas">
                         <div class="plan-details">
-                            <h4>Oil and Gas</h4>
-                            <h2>From $5000</h2>
+                            <h2 class="h3">Oil and Gas</h2>
+                            <h3 class="h1 pricing">
+                                <small>from</small>
+                                <sup>$</sup>5000
+                            </h3>
                             <div class="d-flex mt-4">
                                 <i class="bi bi-bookmarks"></i>
                                 <p>Max Amount: 5,000,000</p>
@@ -268,8 +274,11 @@
                 <article class="col-12 col-sm-6 col-md-4">
                     <a href="#" class="plans p-5 shadow rounded-5" id="realestates">
                         <div class="plan-details">
-                            <h4>Real Estates</h4>
-                            <h2>From $5000</h2>
+                            <h2 class="h3">Real Estates</h2>
+                            <h3 class="h1 pricing">
+                                <small>from</small>
+                                <sup>$</sup>5000
+                            </h3>
                             <div class="d-flex mt-4">
                                 <i class="bi bi-bookmarks"></i>
                                 <p>Max Amount: 5,000,000</p>
