see more button and change of icon

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -197,8 +197,27 @@
   <!-- End Clients Section -->
 
   <!-- ==== Investment plans sections ===-->
-  <section id="investmentPlans">
+  <section id="investmentPlans" class="bg-light">
         <div class="container">
+            <section class="row g-5">
+                <article 
+                    class="col-12 col-sm-10 col-md-8 offset-sm-1 offset-md-2"
+                >
+                    <header class="text-center">
+                        <h1>
+                            Explore Our Investment Plans
+                        </h1>
+
+                        <p>
+                            At <span style="color: #66CC66; font-weight: 900;">RiazVest</span>, 
+                            we offer a range of carefully designed investment plans 
+                            tailored to meet your financial goals.  
+                            Our plans provide flexible options with competitive returns. 
+                        </p>
+
+                    </header>
+                </article>
+            </section>
             <section class="row g-5">
 
                 <article class="col-12 col-sm-6 col-md-4">
@@ -210,22 +229,22 @@
                                 <sup>$</sup>5000
                             </h3>
                             <div class="d-flex mt-4">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Max Amount: 5,000,000</p>
                             </div>
                             
                             <div class="d-flex">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Profit: 5%</p>
                             </div>
                             
                             <div class="d-flex">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Duration: After 1 Week</p>
                             </div>
 
                             <div class="d-flex">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Referrals: 5%</p>
                             </div>
                             
@@ -245,22 +264,22 @@
                                 <sup>$</sup>5000
                             </h3>
                             <div class="d-flex mt-4">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Max Amount: 5,000,000</p>
                             </div>
                             
                             <div class="d-flex">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Profit: 5%</p>
                             </div>
                             
                             <div class="d-flex">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Duration: After 1 Week</p>
                             </div>
 
                             <div class="d-flex">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Referrals: 5%</p>
                             </div>
                             
@@ -280,22 +299,22 @@
                                 <sup>$</sup>5000
                             </h3>
                             <div class="d-flex mt-4">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Max Amount: 5,000,000</p>
                             </div>
                             
                             <div class="d-flex">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Profit: 5%</p>
                             </div>
                             
                             <div class="d-flex">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Duration: After 1 Week</p>
                             </div>
 
                             <div class="d-flex">
-                                <i class="bi bi-bookmarks"></i>
+                                <i class="bi bi-check-all"></i>
                                 <p>Referrals: 5%</p>
                             </div>
                             
@@ -305,6 +324,19 @@
                         </div>
                     </a>
                 </article>
+                
+                <!-- === Manage the see more se-->
+                <a 
+                    href="#" 
+                    class="fw-bolder w-auto d-flex ms-auto" 
+                    style="font-size: 16px !important; color: darkslateblue;"
+                >
+                    See More 
+                    <i 
+                        class="bi bi-arrow-right ms-3" 
+                        style="color: darkslateblue;">
+                    </i>
+                </a>
             </section>
         </div>
   </section>
