--- a/pages/static/css/core.css
+++ b/pages/static/css/core.css
@@ -29,6 +29,7 @@ html, body{
 a{
     display: block;
     color: inherit;
+    text-decoration: none;
 }
 
 .btn-1 {
@@ -156,6 +157,11 @@ background-color: var(--secondary-color);
 /** Investment plan section **/
 #investmentPlans{
     padding: 4rem 10px;
+}
+
+#investmentPlans header p{
+    font-size: 18px;
+    padding: 15px 0;
 }
 
 #investmentPlans .plans{
