alignments and comments

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -218,8 +218,10 @@
                     </header>
                 </article>
             </section>
+
             <section class="row g-5">
 
+                <!-- === SILVER AND GOLD column  === -->
                 <article class="col-12 col-sm-6 col-md-4">
                     <a href="#" class="plans p-5 shadow rounded-5" id="silver_gold">
                         <div class="plan-details">
@@ -255,6 +257,7 @@
                     </a>
                 </article>
 
+                <!-- === OIL AND GAS column  === -->
                 <article class="col-12 col-sm-6 col-md-4">
                     <a href="#" class="plans p-5 shadow rounded-5" id="oil-gas">
                         <div class="plan-details">
@@ -290,6 +293,7 @@
                     </a>
                 </article>
 
+                <!-- === REAL ESTATE column  === -->
                 <article class="col-12 col-sm-6 col-md-4">
                     <a href="#" class="plans p-5 shadow rounded-5" id="realestates">
                         <div class="plan-details">
@@ -325,7 +329,7 @@
                     </a>
                 </article>
                 
-                <!-- === Manage the see more se-->
+                <!-- === Manage the see more -->
                 <a 
                     href="#" 
                     class="fw-bolder w-auto d-flex ms-auto" 
@@ -340,4 +344,5 @@
             </section>
         </div>
   </section>
+  <!-- === END OF INVESTMENT PLAN SECTION === -->
 {% endblock content %}
