working on the achivement section

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -345,4 +345,56 @@
         </div>
   </section>
   <!-- === END OF INVESTMENT PLAN SECTION === -->
+
+  <section id="achievements">
+    <div class="container">
+        <section class="row">
+            <article class="col-12 col-md-7">
+                <div class="row g-5">
+                    <div class="col-6 col-md-4">
+                        <div>
+                            <h3>$400M +</h3>
+                            <p>Assets Managed</p>
+                        </div>
+                    </div>
+
+                    <div class="col-6 col-md-4">
+                        <div>
+                            <h3>17,000 +</h3>
+                            <p>Satisfied Investors</p>
+                        </div>
+                    </div>
+                        
+                    <div class="col-6 col-md-4">
+                        <div>
+                            <h3>7Yrs +</h3>
+                            <p>Industry of Excellence</p>
+                        </div>
+                    </div>
+
+                    <div class="col-6 col-md-4">
+                        <div>
+                            <h3>95 % +</h3>
+                            <p>Client Retention Rate</p>
+                        </div>
+                    </div>
+
+                    <div class="col-6 col-md-4">
+                        <div>
+                            <h3>$ 80M +</h3>
+                            <p>Profit in Returns</p>
+                        </div>
+                    </div>
+
+                    <div class="col-6 col-md-4">
+                        <div class="border border-success p-3">
+                            <h3>100 %</h3>
+                            <p>Transparent Operations</p>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+    </div>
+  </section>
 {% endblock content %}
